# context-aware-translation

./: .gitignore  AGENTS.md  BATCH_TRANSLATION_DIAGRAMS.txt  Makefile  README.md  README_ZH.md  cat-ui.spec  pyproject.toml
.github/workflows/: release.yml
context_aware_translation/: AGENTS.md  __init__.py  config.py  glossary_io.py
context_aware_translation/adapters/: __init__.py
context_aware_translation/application/: __init__.py  composition.py  errors.py  events.py  runtime.py
context_aware_translation/cli/: __init__.py  config_file.py  main.py  output.py  runtime.py  wait.py
context_aware_translation/core/: AGENTS.md  __init__.py  cancellation.py  context_extractor.py  context_manager.py  context_tree.py  context_tree_registry.py  manga_document_handler.py  models.py  progress.py  term_memory.py  term_memory_builder.py  translation_strategies.py
context_aware_translation/documents/: AGENTS.md  __init__.py  base.py  epub.py  epub_container.py  epub_xhtml_utils.py  manga.py  manga_alignment.py  manga_reembed_planner.py  pdf.py  scanned_book.py  subtitle.py  text.py
context_aware_translation/llm/: AGENTS.md  client.py  epub_ocr.py  extractor.py  glossary_translator.py  image_backend_base.py  image_generator.py  language_detector.py  manga_ocr.py  manga_translator.py  ocr.py  reviewer.py  session_trace.py  summarizor.py  token_tracker.py  translation_strategies.py  translator.py
context_aware_translation/storage/: AGENTS.md  __init__.py  book.py  book_db.py  book_manager.py  document_repository.py  endpoint_profile.py  glossary_io.py  registry_db.py  sqlite_locking.py  task_store.py  term_repository.py  translation_batch_task_store.py
context_aware_translation/ui/: AGENTS.md  chrome_sizing.py  constants.py  i18n.py  json_utils.py  main.py  main_window.py  qml_resources.py  sleep_inhibitor.py  startup.py  tips.py  window_controllers.py
context_aware_translation/utils/: AGENTS.md  __init__.py  chunking.py  cjk_normalize.py  compression_marker.py  file_utils.py  hard_wrap.py  hashing.py  image_utils.py  llm_json_cleaner.py  markdown_escape.py  pandoc_export.py  semantic_chunker.py  string_similarity.py  symbol_check.py
context_aware_translation/workflow/: AGENTS.md  __init__.py  batch_translation_task_ops.py  batch_translation_task_service.py  bootstrap.py  image_fetcher.py  runtime.py  service.py  session.py  task_runtime.py
demo/: The Count of Monte Cristo.epub  基督山伯爵.epub
docs/: project-terms-manual-entry-ux.md
docs/examples/: cat-cli.yaml
docs/tech_migration/: README.md  adr-0001-application-boundary.md  qml-shell-migration-plan.md  ui-feature-testing-pattern.md
docs/ux/: README.md  phase1_setup.md  phase2_work.md  phase3_queue.md  phase4_document_workspace.md  phase5_terms.md  phase6_advanced_controls.md  program.md
installer/: AGENTS.md
installer/macos/: AGENTS.md  entitlements.plist
installer/windows/: AGENTS.md  cat-ui.nsi
scripts/: AGENTS.md  build_ui.py  create_appimage.sh  generate_readme_screenshots.py  run_ui_tests.py
tests/: AGENTS.md  conftest.py  test_glossary_io.py  test_logging_handlers.py
tests/adapters/: AGENTS.md
tests/application/: fakes.py  test_composition.py  test_contracts.py  test_document_service.py  test_document_translation_service.py  test_events.py  test_export_services.py  test_queue_service.py  test_terms_service.py  test_ui_harness_pattern.py
tests/architecture/: test_migrated_ui_boundaries.py  test_packaging_hidden_imports.py  test_qml_ui_boundaries.py
(+462 files in other folders)
