[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build]
packages = ["context_aware_translation"]

[project]
name = "context-aware-translation"
version = "0.2.0"
description = "Context-aware translation with glossary management"
requires-python = ">=3.12"
authors = []
dependencies = [
    "defusedxml>=0.7",
    "faiss-cpu>=1.8.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "jellyfish>=1.0.0",
    "numpy>=1.26.4,<2.0.0",
    "openai>=1.0.0",
    "opencc-python-reimplemented>=0.1.7",
    "Pillow>=10.0.0",
    "platformdirs>=4.5.1",
    "pikepdf>=9.0.0",
    "pydantic>=2.9.2",
    "pypandoc-binary>=1.13",
    "pypdfium2>=4.0.0",
    "pyside6>=6.6.0",
    "pysubs2>=1.8.1",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "semchunk>=3.2.3",
    "tenacity>=8.0.0",
    "tokenizers>=0.15.0",
    "torch>=2.0.0",
    "transformers>=4.57.3",
    "protobuf>=4.25.0",
    "superqt>=0.8.0",
]

[project.scripts]
cat-ui = "context_aware_translation.ui.main:main"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pip-licenses>=5.5.1",
    "pyinstaller>=6.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.8",
    "types-defusedxml>=0.7.0",
    "types-pyyaml>=6.0.0",
    "types-requests>=2.31.0",
]

# Ruff configuration (linter + formatter)
[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "ARG002", # unused method argument (pervasive in handler interface implementations)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B905"]  # zip without strict is ok in tests (some tests intentionally test buggy behavior)

[tool.ruff.lint.isort]
known-first-party = ["context_aware_translation"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Mypy configuration (type checking)
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
ignore_missing_imports = false
exclude = [
    "tests/",
    ".venv/",
    "context_aware_translation/adapters/qt/",
    "context_aware_translation/ui/",
]

[[tool.mypy.overrides]]
module = [
    "defusedxml.*",
    "faiss.*",
    "fitz.*",
    "google.genai.*",
    "jellyfish.*",
    "semchunk.*",
    "pypandoc.*",
    "pypdfium2.*",
    "pysubs2.*",
    "transformers.*",
    "PIL.*",
    "opencc.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short -n auto"
